Fix devblog size and list alignment

--- a/_sass/general.scss
+++ b/_sass/general.scss
@@ -97,7 +97,7 @@ a, .link {
         width: 70%;
     }
 
-    h1, h2, h3, h4, h5, p {
+    h1, h2, h3, h4, h5, p, ul, ol {
         align-self: flex-start;
     }
 }
